syntax = "proto3";

package movielist;

import "google/protobuf/empty.proto";

// The movie list service definition.
service MovieList {
  // Gets movie info
  rpc GetMovieInfo(MovieId) returns (Movie) {} //this is the get by id, single movie return
  rpc GetAllMovies(google.protobuf.Empty) returns (Movies) {} //this is the get all, list of movies return
  rpc SearchByName(SearchRequest) returns (Movies) {} //this is the search by name, list of movies return
  rpc CreateMovie(MovieCreate) returns (MovieId) {} //this is the create, single movieId return
}

//This is a what a movie should look like when being returned from the server
message Movie {
  string uuid = 1;
  string title = 2;
  string description = 3;
  //any other fields you need like year, rating, etc
}

//This is what a movie should look like when being sent to the server to be created
message MovieCreate {
  string title = 1;
  string description = 2;
}

//This is what a request should look like when searching for a movie by name, this will be the string that is searched for
message SearchRequest {
  string search = 1;
}

//This is what a response should look like when searching for a movie by name or get all, 
//this will be the list of movies that match the search
message Movies {
  repeated Movie movies = 1;
}

// The request message containing the movie's ID for a getbyid request
message MovieId {
  string id = 1;
}

// message Status 
// {
//     int32 code = 1;
//     string message = 2;
// }